* C API supports in-memory graphing with rrd_graph_in_memory (Evan Miller)
 
Forecasting (Evan Miller)
-----------
* the new MHWPREDICT consolidation function uses a variation of the Holt-Winters
  method. It is a drop-in replacement for HWPREDICT, and is better suited for
  data whose seasonal variations grow or shrink in proportion to the average.

* Due to the new aggregation function, we also get a new version of the
  rrd file format.

Locale Independent Input
------------------------
* Regardles of locale you are in, rrdtool always expects input to be numbers (LC_NUMERIC)
  in C or POSIX locale for numbers. (not 1,1 but 1.1) this is necessary to make
  things like RPN work as it uses , as a separator.

RRDTOOL NEWS
============
Major Changes between 1.0.x and 1.2.x

Graphing
--------

* rewritten graphics generation based on libart.
  - anti-aliased output
  - alpha transparency support
  - truetype fonts
 
* additional graphics formats: EPS, PDF, SVG

* extended multi-part documentation

* VDEF support; define and use variables.  Find, and use, the
  maximum rate seen by rrdtool; compute and show the average

* Sliding window (trend) analysis
  Compute a smoother average, for instance over the last 6 CDPs

* percentile (95th or other)
  Remove peaks, 95 percent of all rates are at or below the
  returned value

Logging
-------
* a second logging interface: rrdtool updatev
  Verbose updating of the database; show CPDs being created

* Aberrant Behavior Detection with Holt-Winters Forecasting
  Compare current data with expected data, detect and log when
  the rates are outside expected levels

* COMPUTE data type for artificial data-sources calculating their
  input using RPN math and data from the other data-sources.
 
Incompatibilities
-----------------
* Colons in COMMENT arguments to rrdtool graph must be escaped with a backslash

* the --alt-y-mrtg option is gone or rather since 1.2.7 it is back but
  without functionality.
