@@ -22,6 +22,7 @@
 /* #define RRD_VERSION   "0002" */
 /* changed because microsecond precision requires another field */
 #define RRD_VERSION   "0004"
+#define RRD_VERSION3  "0003"
 #define FLOAT_COOKIE  8.642135E130
 
 #include "rrd_nan_inf.h"
